Revert "Feature/search-refact : search 관련 클래스 리팩토링 및 버그 수정"